Updates for the junit test and examples.